--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint": "^8.9.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.28.0",
+    "gh-pages": "^6.0.0",
     "gts": "^3.1.0",
     "husky": "^7.0.4",
     "open-cli": "^7.1.0",
